starrocks/starrocks-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ganesh-cluster-mysql
  namespace: starrocks
spec:
  type: NodePort
  ports:
  - appProtocol: mysql
    name: query
    nodePort: 30306
    protocol: TCP
    port: 9030
  selector:
    app.kubernetes.io/component: fe
    app.starrocks.ownerreference/name: ganesh-cluster-fe
