starrocks/starrocks-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: starrocks-fe
  namespace: starrocks
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  hostnames:
  - "starrocks.ganesh.algueron.io"
  rules:
  - backendRefs:
    - kind: Service
      name: ganesh-cluster-fe-service
      port: 8030
